<resources>
    <string name="app_name">SafeNotes</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="email">Email address</string>
    <string name="password">Password</string>
    <string name="login">Sign in with email</string>
    <string name="register">Create new account</string>
    <string name="invitation">Welcome, please sign in</string>
    <string name="logoDesc">Logo image</string>
    <string name="registrationInv">Fill in all fields</string>
    <string name="repeatPassword">Repeat password</string>
    <string name="createAccount">Create account</string>
    <string name="noteTitle">Title</string>
    <string name="noteText">Write here…</string>
    <string name="noteMsg">Message</string>
    <string name="logout">Logout</string>
    <string name="saveNote">Save</string>
    <string name="back">Go back</string>
    <string name="addImage">Add image</string>
    <string name="share">Share</string>
    <string name="noteImage">Note image</string>
    <string name="resetPassword">Reset password</string>
    <string name="resetPasswordText">Enter your email address</string>
    <string name="sortByDateAsc">Date ascending</string>
    <string name="sortByDateDesc">Date descending</string>
    <string name="bottomSheetMess">What you want to do?</string>
    <string name="delete">Delete</string>
    <string name="uploadingPhoto">Uploading photo</string>
    <string name="username">Username</string>
    <string name="signingIn">Signing in…</string>
    <string name="logo">Logo</string>
</resources>