<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/darkGrey" >

    <TextView
        android:id="@+id/bottom_sheet_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:text="@string/bottomSheetMess"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/bottom_sheet_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_share"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottom_sheet_text_view"
        app:layout_constraintEnd_toStartOf="@id/bottom_sheet_delete"
        android:padding="8dp"
        android:contentDescription="@string/share" />

    <ImageView
        android:id="@+id/bottom_sheet_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/bottom_sheet_share"
        app:layout_constraintTop_toBottomOf="@id/bottom_sheet_text_view"
        android:padding="8dp"
        android:contentDescription="@string/delete" />

</androidx.constraintlayout.widget.ConstraintLayout>