<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@color/darkGrey">

    <ImageView
        android:id="@+id/logo_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logoDesc"
        android:src="@drawable/ic_logo_lock_100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.104" />

    <TextView
        android:id="@+id/invitation_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invitation"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_image_view"
        app:layout_constraintVertical_bias="0.093" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/password_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/invitation_text_view"
        app:layout_constraintVertical_bias="0.101">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_address_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:backgroundTint="@color/white"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintTop_toBottomOf="@+id/email_input_layout"
        app:layout_constraintVertical_bias="0.424"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white"
        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:backgroundTint="@color/white"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/login_button"
        android:drawableStart="@drawable/ic_arrow"
        android:paddingHorizontal="40dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/sign_in_google_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_input_layout"
        app:layout_constraintVertical_bias="0.442" />


    <Button
        android:id="@+id/sign_in_google_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/google_sign_in_button"
        android:drawableStart="@drawable/ic_google"
        android:paddingHorizontal="40dp"
        android:text="@string/sign_in_with_google"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/register_button"
        android:drawableStart="@drawable/ic_mail"
        android:paddingHorizontal="40dp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_google_button" />

</androidx.constraintlayout.widget.ConstraintLayout>