<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@color/darkGrey" >

    <TextView
        android:id="@+id/reset_password_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resetPasswordText"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintVertical_bias="0.093" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reset_password_email_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/reset_password_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_password_text_view"
        app:layout_constraintVertical_bias="0.101"
        android:layout_marginTop="60dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reset_password_email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:backgroundTint="@color/white"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/reset_password_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/reset_password_button"
        android:paddingHorizontal="40dp"
        android:text="@string/resetPassword"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_password_email_input_layout"
        app:layout_constraintVertical_bias="0.442" />

</androidx.constraintlayout.widget.ConstraintLayout>